<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.main.act.ui.register.RegisterActivity">

    <ImageButton
        android:id="@+id/imageBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:src="@drawable/btn_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/CommonBarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="55dp"
        android:drawablePadding="5dp"
        android:text="@string/account_registration"
        app:drawableStartCompat="@mipmap/icon_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageBack" />


    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <TextView
            android:id="@+id/tv_86"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawablePadding="5dp"
            android:text="@string/_86"
            android:textColor="@color/c_222"
            app:drawableRightCompat="@mipmap/icon_pull" />

        <sfy.app.qiantaotoutiao.view.MobileEditText
            android:id="@+id/input"
            android:layout_width="288dp"
            android:layout_height="40dp"
            android:autofillHints="true"
            android:background="@null"
            android:hint="@string/telephone_no"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:paddingStart="23dp"
            android:paddingLeft="23dp" />
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="23dp"
        android:background="@color/c_d8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_container" />

    <LinearLayout
        android:id="@+id/ll_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line">

        <CheckBox
            android:id="@+id/agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_gravity="center_vertical"
            android:text="@string/agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/nextStep"
        app:layout_constraintTop_toBottomOf="@id/ll_user"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="23dp"
        app:cardBackgroundColor="@color/c_E6645F"
        app:cardCornerRadius="46dp"
        android:layout_width="45dp"
        android:layout_height="45dp">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_next"
            android:contentDescription="@string/next" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>